--- a/Pei-Ling/style.css
+++ b/Pei-Ling/style.css
@@ -8,11 +8,11 @@ html, body {
     width: 200px;
     height: 200px;
     background-color: orange;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -93px;
-    margin-left: -105px;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    left: -5px;
+    top: 7px;
 }
 
 .halloworld p{    
