--- a/edgar/style.css
+++ b/edgar/style.css
@@ -8,10 +8,9 @@ html, body {
     text-align: center;
     background-color: orange;
     position: absolute;
-    top: 0;
+    top: 7px;
     left: 50%;
     margin-left: -95px;
-    margin-top: 7px;
     width: 200px;
     height: 200px;
 }
@@ -33,7 +32,7 @@ html, body {
     background-color: rgb(0, 255, 85);
     width: 200px;
     height: 200px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .box3{
@@ -43,5 +42,5 @@ html, body {
     background-color: rgb(0, 183, 255);
     width: 200px;
     height: 200px;
-    z-index: 3;
+    z-index: 2;
 }
